--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: pandoc/actions/setup@main
       - name: Install dependencies
         run: |
-          apt update
-          apt install pandoc
+          sudo apt update
+          sudo apt install pandoc
           pip install -r requirements.txt
       - name: Ablog build
         run: |
